Update notebook and add fika picture

--- a/fikalist.ipynb
+++ b/fikalist.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "## Constraints\n",
     "\n",
-    "Sadly fika is not always simple and we have to take into account constraints when making the list. This includes Swedish holidays which fall on a Friday (or Thursday...) and also people who are leaving soon and won't be able to provide fika after a certain date. It can also be convenient for couples to live together to have the same fika date. No fear! This can be handled with ```FikaList.constraints```.\n",
+    "Sadly fika is not always simple and we have to take into account constraints when making the list. This includes Swedish holidays which fall on a Friday (or Thursday...) and also people who are leaving soon and won't be able to provide fika after a certain date. It can also be convenient for couples who live together to have the same fika date. No fear! This can be handled with ```FikaList.constraints```.\n",
     "\n",
     "Major holidays (summer, winter and Easter) are already programmed into the ```FikaList``` class as well as Swedish *red days*."
    ]
@@ -318,18 +318,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T17:57:06.845251Z",
-     "start_time": "2018-04-24T17:57:06.839331Z"
+     "end_time": "2018-04-24T18:25:07.471319Z",
+     "start_time": "2018-04-24T18:25:07.464410Z"
     }
    },
    "outputs": [],
    "source": [
     "output_filename = 'old_fikalists/summer18.fika'\n",
-    "fikalist.save(output_filename)"
+    "fikalist.save(output_filename)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-24T18:25:24.991217Z",
+     "start_time": "2018-04-24T18:25:24.546481Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style>  \n",
+       "<table id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122\" > \n",
+       "<thead>    <tr> \n",
+       "        <th class=\"blank level0\" ></th> \n",
+       "        <th class=\"col_heading level0 col0\" >Week</th> \n",
+       "        <th class=\"col_heading level0 col1\" >Friday</th> \n",
+       "        <th class=\"col_heading level0 col2\" >Person 1</th> \n",
+       "        <th class=\"col_heading level0 col3\" >Person 2</th> \n",
+       "    </tr></thead> \n",
+       "<tbody>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col0\" class=\"data row0 col0\" >17</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col1\" class=\"data row0 col1\" >27/04/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col2\" class=\"data row0 col2\" >Rakhee</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col3\" class=\"data row0 col3\" >Nirmal</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row1\" class=\"row_heading level0 row1\" >1</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col0\" class=\"data row1 col0\" >18</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col1\" class=\"data row1 col1\" >04/05/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col2\" class=\"data row1 col2\" >Linda</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col3\" class=\"data row1 col3\" >Bengt</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row2\" class=\"row_heading level0 row2\" >2</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col0\" class=\"data row2 col0\" >20</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col1\" class=\"data row2 col1\" >18/05/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col2\" class=\"data row2 col2\" >Rupal</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col3\" class=\"data row2 col3\" >Dennis</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row3\" class=\"row_heading level0 row3\" >3</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col0\" class=\"data row3 col0\" >21</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col1\" class=\"data row3 col1\" >25/05/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col2\" class=\"data row3 col2\" >Felix</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col3\" class=\"data row3 col3\" >Josefin</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row4\" class=\"row_heading level0 row4\" >4</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col0\" class=\"data row4 col0\" >22</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col1\" class=\"data row4 col1\" >01/06/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col2\" class=\"data row4 col2\" >Victor</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col3\" class=\"data row4 col3\" >Edvin</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row5\" class=\"row_heading level0 row5\" >5</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col0\" class=\"data row5 col0\" >23</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col1\" class=\"data row5 col1\" >08/06/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col2\" class=\"data row5 col2\" >Thedi</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col3\" class=\"data row5 col3\" >Björn</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row6\" class=\"row_heading level0 row6\" >6</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col0\" class=\"data row6 col0\" >24</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col1\" class=\"data row6 col1\" >15/06/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col2\" class=\"data row6 col2\" >Christer</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col3\" class=\"data row6 col3\" >Filip</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row7\" class=\"row_heading level0 row7\" >7</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col0\" class=\"data row7 col0\" >26</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col1\" class=\"data row7 col1\" >29/06/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col2\" class=\"data row7 col2\" >Christian</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col3\" class=\"data row7 col3\" >Francesca</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row8\" class=\"row_heading level0 row8\" >8</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col0\" class=\"data row8 col0\" >36</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col1\" class=\"data row8 col1\" >07/09/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col2\" class=\"data row8 col2\" >Mark</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col3\" class=\"data row8 col3\" >Jonas</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row9\" class=\"row_heading level0 row9\" >9</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col0\" class=\"data row9 col0\" >37</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col1\" class=\"data row9 col1\" >14/09/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col2\" class=\"data row9 col2\" >Christoffer</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col3\" class=\"data row9 col3\" >Zeynep</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row10\" class=\"row_heading level0 row10\" >10</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col0\" class=\"data row10 col0\" >38</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col1\" class=\"data row10 col1\" >21/09/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col2\" class=\"data row10 col2\" >nan</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col3\" class=\"data row10 col3\" >Mószi</td> \n",
+       "    </tr>    <tr> \n",
+       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row11\" class=\"row_heading level0 row11\" >11</th> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col0\" class=\"data row11 col0\" >39</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col1\" class=\"data row11 col1\" >28/09/2018</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col2\" class=\"data row11 col2\" >Exjobbare</td> \n",
+       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col3\" class=\"data row11 col3\" >nan</td> \n",
+       "    </tr></tbody> \n",
+       "</table> "
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1138290f0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = fikalist.fikalist\n",
+    "df.style\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
