--- a/fikalist.ipynb
+++ b/fikalist.ipynb
@@ -15,13 +15,12 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T17:57:06.692277Z",
-     "start_time": "2018-04-24T17:57:06.520807Z"
+     "end_time": "2018-04-30T08:48:28.825523Z",
+     "start_time": "2018-04-30T08:48:28.643909Z"
     }
    },
    "outputs": [],
    "source": [
-    "from IPython.display import display\n",
     "from fika import *"
    ]
   },
@@ -49,8 +48,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T17:57:06.701012Z",
-     "start_time": "2018-04-24T17:57:06.694568Z"
+     "end_time": "2018-04-30T08:48:29.818931Z",
+     "start_time": "2018-04-30T08:48:29.811663Z"
     }
    },
    "outputs": [],
@@ -78,8 +77,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T17:57:06.712186Z",
-     "start_time": "2018-04-24T17:57:06.703686Z"
+     "end_time": "2018-04-30T08:48:30.752178Z",
+     "start_time": "2018-04-30T08:48:30.747136Z"
     }
    },
    "outputs": [
@@ -124,8 +123,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T17:57:06.717976Z",
-     "start_time": "2018-04-24T17:57:06.714546Z"
+     "end_time": "2018-04-30T08:48:33.087592Z",
+     "start_time": "2018-04-30T08:48:33.084639Z"
     }
    },
    "outputs": [],
@@ -153,8 +152,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T17:57:06.837625Z",
-     "start_time": "2018-04-24T17:57:06.720569Z"
+     "end_time": "2018-04-30T08:48:34.557623Z",
+     "start_time": "2018-04-30T08:48:34.427388Z"
     }
    },
    "outputs": [
@@ -188,85 +187,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>17</td>\n",
-       "      <td>27/04/2018</td>\n",
-       "      <td>Rakhee</td>\n",
-       "      <td>Nirmal</td>\n",
+       "      <td>18</td>\n",
+       "      <td>04/05/2018</td>\n",
+       "      <td>Victor</td>\n",
+       "      <td>Björn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>18</td>\n",
-       "      <td>04/05/2018</td>\n",
-       "      <td>Linda</td>\n",
-       "      <td>Bengt</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18/05/2018</td>\n",
+       "      <td>Christian</td>\n",
+       "      <td>Filip</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20</td>\n",
-       "      <td>18/05/2018</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25/05/2018</td>\n",
        "      <td>Rupal</td>\n",
-       "      <td>Dennis</td>\n",
+       "      <td>Edvin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>21</td>\n",
-       "      <td>25/05/2018</td>\n",
-       "      <td>Felix</td>\n",
+       "      <td>22</td>\n",
+       "      <td>01/06/2018</td>\n",
+       "      <td>Dennis</td>\n",
        "      <td>Josefin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>22</td>\n",
-       "      <td>01/06/2018</td>\n",
-       "      <td>Victor</td>\n",
-       "      <td>Edvin</td>\n",
+       "      <td>23</td>\n",
+       "      <td>08/06/2018</td>\n",
+       "      <td>Christer</td>\n",
+       "      <td>Bengt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>23</td>\n",
-       "      <td>08/06/2018</td>\n",
-       "      <td>Thedi</td>\n",
-       "      <td>Björn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>24</td>\n",
        "      <td>15/06/2018</td>\n",
-       "      <td>Christer</td>\n",
-       "      <td>Filip</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>26</td>\n",
-       "      <td>29/06/2018</td>\n",
-       "      <td>Christian</td>\n",
-       "      <td>Francesca</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>36</td>\n",
-       "      <td>07/09/2018</td>\n",
-       "      <td>Mark</td>\n",
+       "      <td>Felix</td>\n",
        "      <td>Jonas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>37</td>\n",
-       "      <td>14/09/2018</td>\n",
-       "      <td>Christoffer</td>\n",
-       "      <td>Zeynep</td>\n",
+       "      <th>6</th>\n",
+       "      <td>36</td>\n",
+       "      <td>07/09/2018</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>Francesca</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>38</td>\n",
-       "      <td>21/09/2018</td>\n",
-       "      <td>nan</td>\n",
+       "      <th>7</th>\n",
+       "      <td>37</td>\n",
+       "      <td>14/09/2018</td>\n",
+       "      <td>Thedi</td>\n",
        "      <td>Mószi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>8</th>\n",
+       "      <td>38</td>\n",
+       "      <td>21/09/2018</td>\n",
+       "      <td>Rakhee</td>\n",
+       "      <td>Nirmal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>39</td>\n",
        "      <td>28/09/2018</td>\n",
+       "      <td>Zeynep</td>\n",
+       "      <td>Linda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>40</td>\n",
+       "      <td>05/10/2018</td>\n",
+       "      <td>Christoffer</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>41</td>\n",
+       "      <td>12/10/2018</td>\n",
        "      <td>Exjobbare</td>\n",
        "      <td>nan</td>\n",
        "    </tr>\n",
@@ -276,18 +275,18 @@
       ],
       "text/plain": [
        "   Week      Friday     Person 1   Person 2\n",
-       "0    17  27/04/2018       Rakhee     Nirmal\n",
-       "1    18  04/05/2018        Linda      Bengt\n",
-       "2    20  18/05/2018        Rupal     Dennis\n",
-       "3    21  25/05/2018        Felix    Josefin\n",
-       "4    22  01/06/2018       Victor      Edvin\n",
-       "5    23  08/06/2018        Thedi      Björn\n",
-       "6    24  15/06/2018     Christer      Filip\n",
-       "7    26  29/06/2018    Christian  Francesca\n",
-       "8    36  07/09/2018         Mark      Jonas\n",
-       "9    37  14/09/2018  Christoffer     Zeynep\n",
-       "10   38  21/09/2018          nan      Mószi\n",
-       "11   39  28/09/2018    Exjobbare        nan"
+       "0    18  04/05/2018       Victor      Björn\n",
+       "1    20  18/05/2018    Christian      Filip\n",
+       "2    21  25/05/2018        Rupal      Edvin\n",
+       "3    22  01/06/2018       Dennis    Josefin\n",
+       "4    23  08/06/2018     Christer      Bengt\n",
+       "5    24  15/06/2018        Felix      Jonas\n",
+       "6    36  07/09/2018         Mark  Francesca\n",
+       "7    37  14/09/2018        Thedi      Mószi\n",
+       "8    38  21/09/2018       Rakhee     Nirmal\n",
+       "9    39  28/09/2018       Zeynep      Linda\n",
+       "10   40  05/10/2018  Christoffer        nan\n",
+       "11   41  12/10/2018    Exjobbare        nan"
       ]
      },
      "metadata": {},
@@ -318,137 +317,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T18:25:07.471319Z",
-     "start_time": "2018-04-24T18:25:07.464410Z"
+     "end_time": "2018-04-30T08:48:52.124890Z",
+     "start_time": "2018-04-30T08:48:52.118016Z"
     }
    },
    "outputs": [],
    "source": [
     "output_filename = 'old_fikalists/summer18.fika'\n",
-    "fikalist.save(output_filename)\n"
+    "fikalist.save(output_filename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-24T18:25:24.991217Z",
-     "start_time": "2018-04-24T18:25:24.546481Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style>  \n",
-       "<table id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122\" > \n",
-       "<thead>    <tr> \n",
-       "        <th class=\"blank level0\" ></th> \n",
-       "        <th class=\"col_heading level0 col0\" >Week</th> \n",
-       "        <th class=\"col_heading level0 col1\" >Friday</th> \n",
-       "        <th class=\"col_heading level0 col2\" >Person 1</th> \n",
-       "        <th class=\"col_heading level0 col3\" >Person 2</th> \n",
-       "    </tr></thead> \n",
-       "<tbody>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col0\" class=\"data row0 col0\" >17</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col1\" class=\"data row0 col1\" >27/04/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col2\" class=\"data row0 col2\" >Rakhee</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row0_col3\" class=\"data row0 col3\" >Nirmal</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row1\" class=\"row_heading level0 row1\" >1</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col0\" class=\"data row1 col0\" >18</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col1\" class=\"data row1 col1\" >04/05/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col2\" class=\"data row1 col2\" >Linda</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row1_col3\" class=\"data row1 col3\" >Bengt</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row2\" class=\"row_heading level0 row2\" >2</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col0\" class=\"data row2 col0\" >20</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col1\" class=\"data row2 col1\" >18/05/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col2\" class=\"data row2 col2\" >Rupal</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row2_col3\" class=\"data row2 col3\" >Dennis</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row3\" class=\"row_heading level0 row3\" >3</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col0\" class=\"data row3 col0\" >21</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col1\" class=\"data row3 col1\" >25/05/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col2\" class=\"data row3 col2\" >Felix</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row3_col3\" class=\"data row3 col3\" >Josefin</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row4\" class=\"row_heading level0 row4\" >4</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col0\" class=\"data row4 col0\" >22</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col1\" class=\"data row4 col1\" >01/06/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col2\" class=\"data row4 col2\" >Victor</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row4_col3\" class=\"data row4 col3\" >Edvin</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row5\" class=\"row_heading level0 row5\" >5</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col0\" class=\"data row5 col0\" >23</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col1\" class=\"data row5 col1\" >08/06/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col2\" class=\"data row5 col2\" >Thedi</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row5_col3\" class=\"data row5 col3\" >Björn</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row6\" class=\"row_heading level0 row6\" >6</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col0\" class=\"data row6 col0\" >24</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col1\" class=\"data row6 col1\" >15/06/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col2\" class=\"data row6 col2\" >Christer</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row6_col3\" class=\"data row6 col3\" >Filip</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row7\" class=\"row_heading level0 row7\" >7</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col0\" class=\"data row7 col0\" >26</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col1\" class=\"data row7 col1\" >29/06/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col2\" class=\"data row7 col2\" >Christian</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row7_col3\" class=\"data row7 col3\" >Francesca</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row8\" class=\"row_heading level0 row8\" >8</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col0\" class=\"data row8 col0\" >36</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col1\" class=\"data row8 col1\" >07/09/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col2\" class=\"data row8 col2\" >Mark</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row8_col3\" class=\"data row8 col3\" >Jonas</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row9\" class=\"row_heading level0 row9\" >9</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col0\" class=\"data row9 col0\" >37</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col1\" class=\"data row9 col1\" >14/09/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col2\" class=\"data row9 col2\" >Christoffer</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row9_col3\" class=\"data row9 col3\" >Zeynep</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row10\" class=\"row_heading level0 row10\" >10</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col0\" class=\"data row10 col0\" >38</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col1\" class=\"data row10 col1\" >21/09/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col2\" class=\"data row10 col2\" >nan</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row10_col3\" class=\"data row10 col3\" >Mószi</td> \n",
-       "    </tr>    <tr> \n",
-       "        <th id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122level0_row11\" class=\"row_heading level0 row11\" >11</th> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col0\" class=\"data row11 col0\" >39</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col1\" class=\"data row11 col1\" >28/09/2018</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col2\" class=\"data row11 col2\" >Exjobbare</td> \n",
-       "        <td id=\"T_db2a9fa8_47ec_11e8_9514_acde48001122row11_col3\" class=\"data row11 col3\" >nan</td> \n",
-       "    </tr></tbody> \n",
-       "</table> "
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1138290f0>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = fikalist.fikalist\n",
-    "df.style\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
