--- a/fikalist.ipynb
+++ b/fikalist.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-30T08:48:28.825523Z",
-     "start_time": "2018-04-30T08:48:28.643909Z"
+     "end_time": "2018-10-16T08:00:38.490057Z",
+     "start_time": "2018-10-16T08:00:38.486999Z"
     }
    },
    "outputs": [],
@@ -45,22 +45,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-30T08:48:29.818931Z",
-     "start_time": "2018-04-30T08:48:29.811663Z"
+     "end_time": "2018-10-16T08:00:38.967133Z",
+     "start_time": "2018-10-16T08:00:38.959390Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Victor\n",
+      "Björn\n",
+      "Francesca\n",
+      "Bengt\n",
+      "Rupal\n",
+      "Christer\n",
+      "Dennis\n",
+      "Felix\n",
+      "Edvin\n",
+      "Filip\n",
+      "Josefin\n",
+      "Christian\n",
+      "Mark\n",
+      "Jonas\n",
+      "Thedi\n",
+      "Linda\n",
+      "Zeynep\n",
+      "Moszi\n",
+      "Christoffer\n",
+      "Exjobbare\n",
+      "Rakhee\n",
+      "Nirmal\n"
+     ]
+    }
+   ],
    "source": [
     "# input data\n",
-    "filename = 'old_fikalists/spring18.fika'\n",
+    "filename = 'old_fikalists/summer18_edits.fika'\n",
     "fikalist = FikaList()\n",
     "fikalist.input_list(filename)\n",
     "\n",
     "# show all the potential fika providers\n",
-    "#fikalist.providers.show()"
+    "fikalist.providers.show()"
    ]
   },
   {
@@ -74,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-30T08:48:30.752178Z",
-     "start_time": "2018-04-30T08:48:30.747136Z"
+     "end_time": "2018-10-16T08:00:39.541819Z",
+     "start_time": "2018-10-16T08:00:39.535972Z"
     }
    },
    "outputs": [
@@ -86,22 +115,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Farewell, Alex!\n",
-      "Farewell, Giulia!\n",
-      "Farewell, Fei!\n",
-      "Farewell, David!\n",
-      "Farewell, Liang!\n",
-      "Welcome, Francesca!\n",
+      "Farewell, Victor!\n",
+      "Farewell, Edvin!\n",
+      "Farewell, Christoffer!\n",
+      "Welcome, David!\n",
+      "Welcome, Navpreet!\n",
       "Alex is not in the list of providers...\n"
      ]
     }
    ],
    "source": [
     "# update by adding and removing people, use lists if you like.\n",
-    "fikalist.providers.remove(['Alex', 'Giulia', 'Fei'])\n",
-    "fikalist.providers.remove('David')\n",
-    "fikalist.providers.remove('Liang')\n",
-    "fikalist.providers.add('Francesca')\n",
+    "fikalist.providers.remove(['Victor', 'Edvin', 'Christoffer'])\n",
+    "fikalist.providers.add('David')\n",
+    "fikalist.providers.add('Navpreet')\n",
     "\n",
     "# FikaList even handles your errors\n",
     "fikalist.providers.remove('Alex')"
@@ -120,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-30T08:48:33.087592Z",
-     "start_time": "2018-04-30T08:48:33.084639Z"
+     "end_time": "2018-10-16T08:00:40.371098Z",
+     "start_time": "2018-10-16T08:00:40.367638Z"
     }
    },
    "outputs": [],
    "source": [
     "# Victor is leaving soon, so he should do fika sooner!\n",
-    "fikalist.constraints.add('Victor', 'leaving soon')\n",
+    "#fikalist.constraints.add('Victor', 'leaving soon')\n",
     "\n",
     "# Rakhee and Nirmal live together, so they should have the same fika date\n",
     "fikalist.constraints.add(['Rakhee', 'Nirmal'], 'together')"
@@ -149,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-30T08:48:34.557623Z",
-     "start_time": "2018-04-30T08:48:34.427388Z"
+     "end_time": "2018-10-16T08:00:41.725540Z",
+     "start_time": "2018-10-16T08:00:41.608369Z"
     }
    },
    "outputs": [
@@ -187,85 +214,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>18</td>\n",
-       "      <td>04/05/2018</td>\n",
-       "      <td>Victor</td>\n",
-       "      <td>Björn</td>\n",
+       "      <td>42</td>\n",
+       "      <td>19/10/2018</td>\n",
+       "      <td>Filip</td>\n",
+       "      <td>Navpreet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20</td>\n",
-       "      <td>18/05/2018</td>\n",
-       "      <td>Christian</td>\n",
-       "      <td>Filip</td>\n",
+       "      <td>43</td>\n",
+       "      <td>26/10/2018</td>\n",
+       "      <td>Rupal</td>\n",
+       "      <td>Mark</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21</td>\n",
-       "      <td>25/05/2018</td>\n",
-       "      <td>Rupal</td>\n",
-       "      <td>Edvin</td>\n",
+       "      <td>44</td>\n",
+       "      <td>02/11/2018</td>\n",
+       "      <td>Francesca</td>\n",
+       "      <td>David</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>22</td>\n",
-       "      <td>01/06/2018</td>\n",
-       "      <td>Dennis</td>\n",
-       "      <td>Josefin</td>\n",
+       "      <td>45</td>\n",
+       "      <td>09/11/2018</td>\n",
+       "      <td>Bengt</td>\n",
+       "      <td>Felix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>23</td>\n",
-       "      <td>08/06/2018</td>\n",
+       "      <td>46</td>\n",
+       "      <td>16/11/2018</td>\n",
+       "      <td>Jonas</td>\n",
        "      <td>Christer</td>\n",
-       "      <td>Bengt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>24</td>\n",
-       "      <td>15/06/2018</td>\n",
-       "      <td>Felix</td>\n",
-       "      <td>Jonas</td>\n",
+       "      <td>47</td>\n",
+       "      <td>23/11/2018</td>\n",
+       "      <td>Björn</td>\n",
+       "      <td>Christian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>36</td>\n",
-       "      <td>07/09/2018</td>\n",
-       "      <td>Mark</td>\n",
-       "      <td>Francesca</td>\n",
+       "      <td>48</td>\n",
+       "      <td>30/11/2018</td>\n",
+       "      <td>Moszi</td>\n",
+       "      <td>Josefin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>37</td>\n",
-       "      <td>14/09/2018</td>\n",
+       "      <td>49</td>\n",
+       "      <td>07/12/2018</td>\n",
        "      <td>Thedi</td>\n",
-       "      <td>Mószi</td>\n",
+       "      <td>Dennis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>38</td>\n",
-       "      <td>21/09/2018</td>\n",
-       "      <td>Rakhee</td>\n",
+       "      <td>50</td>\n",
+       "      <td>14/12/2018</td>\n",
        "      <td>Nirmal</td>\n",
+       "      <td>Rakhee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>39</td>\n",
-       "      <td>28/09/2018</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11/01/2019</td>\n",
        "      <td>Zeynep</td>\n",
        "      <td>Linda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>40</td>\n",
-       "      <td>05/10/2018</td>\n",
-       "      <td>Christoffer</td>\n",
-       "      <td>nan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>41</td>\n",
-       "      <td>12/10/2018</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18/01/2019</td>\n",
        "      <td>Exjobbare</td>\n",
        "      <td>nan</td>\n",
        "    </tr>\n",
@@ -274,19 +294,18 @@
        "</div>"
       ],
       "text/plain": [
-       "   Week      Friday     Person 1   Person 2\n",
-       "0    18  04/05/2018       Victor      Björn\n",
-       "1    20  18/05/2018    Christian      Filip\n",
-       "2    21  25/05/2018        Rupal      Edvin\n",
-       "3    22  01/06/2018       Dennis    Josefin\n",
-       "4    23  08/06/2018     Christer      Bengt\n",
-       "5    24  15/06/2018        Felix      Jonas\n",
-       "6    36  07/09/2018         Mark  Francesca\n",
-       "7    37  14/09/2018        Thedi      Mószi\n",
-       "8    38  21/09/2018       Rakhee     Nirmal\n",
-       "9    39  28/09/2018       Zeynep      Linda\n",
-       "10   40  05/10/2018  Christoffer        nan\n",
-       "11   41  12/10/2018    Exjobbare        nan"
+       "   Week      Friday   Person 1   Person 2\n",
+       "0    42  19/10/2018      Filip   Navpreet\n",
+       "1    43  26/10/2018      Rupal       Mark\n",
+       "2    44  02/11/2018  Francesca      David\n",
+       "3    45  09/11/2018      Bengt      Felix\n",
+       "4    46  16/11/2018      Jonas   Christer\n",
+       "5    47  23/11/2018      Björn  Christian\n",
+       "6    48  30/11/2018      Moszi    Josefin\n",
+       "7    49  07/12/2018      Thedi     Dennis\n",
+       "8    50  14/12/2018     Nirmal     Rakhee\n",
+       "9     2  11/01/2019     Zeynep      Linda\n",
+       "10    3  18/01/2019  Exjobbare        nan"
       ]
      },
      "metadata": {},
@@ -317,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-30T08:48:52.124890Z",
-     "start_time": "2018-04-30T08:48:52.118016Z"
+     "end_time": "2018-10-16T08:03:58.636624Z",
+     "start_time": "2018-10-16T08:03:58.629559Z"
     }
    },
    "outputs": [],
    "source": [
-    "output_filename = 'old_fikalists/summer18.fika'\n",
+    "output_filename = 'old_fikalists/autumn18.fika'\n",
     "fikalist.save(output_filename)"
    ]
   }
