--- a/fikalist.ipynb
+++ b/fikalist.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fikalist generator for Particle & Astroparticle Physics\n",
+    "# Fikalist for Particle & Astroparticle Physics\n",
     "\n",
     "Input: old fikalist  \n",
     "Output: new fikalist based on weighted sampling without replacement"
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T08:00:38.490057Z",
-     "start_time": "2018-10-16T08:00:38.486999Z"
+     "end_time": "2019-01-21T09:47:54.297022Z",
+     "start_time": "2019-01-21T09:47:54.129774Z"
     }
    },
    "outputs": [],
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T08:00:38.967133Z",
-     "start_time": "2018-10-16T08:00:38.959390Z"
+     "end_time": "2019-01-21T09:47:55.370560Z",
+     "start_time": "2019-01-21T09:47:55.338539Z"
     }
    },
    "outputs": [
@@ -57,34 +57,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Victor\n",
-      "Björn\n",
-      "Francesca\n",
-      "Bengt\n",
-      "Rupal\n",
-      "Christer\n",
-      "Dennis\n",
-      "Felix\n",
-      "Edvin\n",
       "Filip\n",
-      "Josefin\n",
-      "Christian\n",
+      "Francesca\n",
+      "Rupal\n",
       "Mark\n",
+      "Navpreet\n",
+      "David\n",
+      "Bengt\n",
+      "Felix\n",
       "Jonas\n",
-      "Thedi\n",
       "Linda\n",
-      "Zeynep\n",
+      "Björn\n",
+      "Christian\n",
       "Moszi\n",
-      "Christoffer\n",
-      "Exjobbare\n",
+      "Josefin\n",
+      "Thedi\n",
+      "Dennis\n",
+      "Nirmal\n",
       "Rakhee\n",
-      "Nirmal\n"
+      "Zeynep\n",
+      "Christer\n",
+      "Exjobbare\n"
      ]
     }
    ],
    "source": [
     "# input data\n",
-    "filename = 'old_fikalists/summer18_edits.fika'\n",
+    "filename = 'old_fikalists/autumn18_edits.fika'\n",
     "fikalist = FikaList()\n",
     "fikalist.input_list(filename)\n",
     "\n",
@@ -103,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T08:00:39.541819Z",
-     "start_time": "2018-10-16T08:00:39.535972Z"
+     "end_time": "2019-01-21T09:47:56.686911Z",
+     "start_time": "2019-01-21T09:47:56.682419Z"
     }
    },
    "outputs": [
@@ -115,20 +114,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Farewell, Victor!\n",
-      "Farewell, Edvin!\n",
-      "Farewell, Christoffer!\n",
-      "Welcome, David!\n",
-      "Welcome, Navpreet!\n",
+      "Farewell, David!\n",
+      "Welcome, Giulia!\n",
+      "Welcome, Vlasta!\n",
       "Alex is not in the list of providers...\n"
      ]
     }
    ],
    "source": [
     "# update by adding and removing people, use lists if you like.\n",
-    "fikalist.providers.remove(['Victor', 'Edvin', 'Christoffer'])\n",
-    "fikalist.providers.add('David')\n",
-    "fikalist.providers.add('Navpreet')\n",
+    "fikalist.providers.remove(['David'])\n",
+    "fikalist.providers.add('Giulia')\n",
+    "fikalist.providers.add('Vlasta')\n",
     "\n",
     "# FikaList even handles your errors\n",
     "fikalist.providers.remove('Alex')"
@@ -147,17 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T08:00:40.371098Z",
-     "start_time": "2018-10-16T08:00:40.367638Z"
+     "end_time": "2019-01-21T09:47:58.685520Z",
+     "start_time": "2019-01-21T09:47:58.682268Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Victor is leaving soon, so he should do fika sooner!\n",
-    "#fikalist.constraints.add('Victor', 'leaving soon')\n",
+    "# Bump up Giulia and Vlasta as they just returned\n",
+    "fikalist.constraints.add('Giulia', 'just arrived')\n",
+    "fikalist.constraints.add('Vlasta', 'just arrived')\n",
     "\n",
     "# Rakhee and Nirmal live together, so they should have the same fika date\n",
     "fikalist.constraints.add(['Rakhee', 'Nirmal'], 'together')"
@@ -171,16 +169,16 @@
     "\n",
     "Now that everything is up to date and the constraints are defined, we can go ahead and make a fikalist.\n",
     "\n",
-    "The order is determined by random sampling without replacement, with people who made fika a long time ago weighted preferentially. Also, people are put together with someone who they have not been with before."
+    "The order is determined by random sampling without replacement, with people who made fika a long time ago weighted preferentially. Also, people are put together with someone who they have not been with in the previous list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T08:00:41.725540Z",
-     "start_time": "2018-10-16T08:00:41.608369Z"
+     "end_time": "2019-01-21T09:48:02.794717Z",
+     "start_time": "2019-01-21T09:48:02.666835Z"
     }
    },
    "outputs": [
@@ -214,78 +212,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>42</td>\n",
-       "      <td>19/10/2018</td>\n",
-       "      <td>Filip</td>\n",
-       "      <td>Navpreet</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25/01/2019</td>\n",
+       "      <td>Dennis</td>\n",
+       "      <td>Francesca</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>43</td>\n",
-       "      <td>26/10/2018</td>\n",
-       "      <td>Rupal</td>\n",
-       "      <td>Mark</td>\n",
+       "      <td>5</td>\n",
+       "      <td>01/02/2019</td>\n",
+       "      <td>Giulia</td>\n",
+       "      <td>Vlasta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>44</td>\n",
-       "      <td>02/11/2018</td>\n",
-       "      <td>Francesca</td>\n",
-       "      <td>David</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>45</td>\n",
-       "      <td>09/11/2018</td>\n",
-       "      <td>Bengt</td>\n",
-       "      <td>Felix</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>46</td>\n",
-       "      <td>16/11/2018</td>\n",
-       "      <td>Jonas</td>\n",
-       "      <td>Christer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>47</td>\n",
-       "      <td>23/11/2018</td>\n",
-       "      <td>Björn</td>\n",
-       "      <td>Christian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>48</td>\n",
-       "      <td>30/11/2018</td>\n",
-       "      <td>Moszi</td>\n",
-       "      <td>Josefin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>49</td>\n",
-       "      <td>07/12/2018</td>\n",
-       "      <td>Thedi</td>\n",
-       "      <td>Dennis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>50</td>\n",
-       "      <td>14/12/2018</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08/02/2019</td>\n",
        "      <td>Nirmal</td>\n",
        "      <td>Rakhee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2</td>\n",
-       "      <td>11/01/2019</td>\n",
-       "      <td>Zeynep</td>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>15/02/2019</td>\n",
+       "      <td>Felix</td>\n",
+       "      <td>Navpreet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>22/02/2019</td>\n",
+       "      <td>Mark</td>\n",
        "      <td>Linda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>9</td>\n",
+       "      <td>01/03/2019</td>\n",
+       "      <td>Filip</td>\n",
+       "      <td>Rupal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10</td>\n",
+       "      <td>08/03/2019</td>\n",
+       "      <td>Jonas</td>\n",
+       "      <td>Christer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>11</td>\n",
+       "      <td>15/03/2019</td>\n",
+       "      <td>Thedi</td>\n",
+       "      <td>Björn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12</td>\n",
+       "      <td>22/03/2019</td>\n",
+       "      <td>Bengt</td>\n",
+       "      <td>Christian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>13</td>\n",
+       "      <td>29/03/2019</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Moszi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>3</td>\n",
-       "      <td>18/01/2019</td>\n",
+       "      <td>14</td>\n",
+       "      <td>05/04/2019</td>\n",
+       "      <td>Josefin</td>\n",
+       "      <td>Zeynep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>15</td>\n",
+       "      <td>12/04/2019</td>\n",
        "      <td>Exjobbare</td>\n",
        "      <td>nan</td>\n",
        "    </tr>\n",
@@ -295,17 +300,18 @@
       ],
       "text/plain": [
        "   Week      Friday   Person 1   Person 2\n",
-       "0    42  19/10/2018      Filip   Navpreet\n",
-       "1    43  26/10/2018      Rupal       Mark\n",
-       "2    44  02/11/2018  Francesca      David\n",
-       "3    45  09/11/2018      Bengt      Felix\n",
-       "4    46  16/11/2018      Jonas   Christer\n",
-       "5    47  23/11/2018      Björn  Christian\n",
-       "6    48  30/11/2018      Moszi    Josefin\n",
-       "7    49  07/12/2018      Thedi     Dennis\n",
-       "8    50  14/12/2018     Nirmal     Rakhee\n",
-       "9     2  11/01/2019     Zeynep      Linda\n",
-       "10    3  18/01/2019  Exjobbare        nan"
+       "0     4  25/01/2019     Dennis  Francesca\n",
+       "1     5  01/02/2019     Giulia     Vlasta\n",
+       "2     6  08/02/2019     Nirmal     Rakhee\n",
+       "3     7  15/02/2019      Felix   Navpreet\n",
+       "4     8  22/02/2019       Mark      Linda\n",
+       "5     9  01/03/2019      Filip      Rupal\n",
+       "6    10  08/03/2019      Jonas   Christer\n",
+       "7    11  15/03/2019      Thedi      Björn\n",
+       "8    12  22/03/2019      Bengt  Christian\n",
+       "9    13  29/03/2019        nan      Moszi\n",
+       "10   14  05/04/2019    Josefin     Zeynep\n",
+       "11   15  12/04/2019  Exjobbare        nan"
       ]
      },
      "metadata": {},
@@ -336,16 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T08:03:58.636624Z",
-     "start_time": "2018-10-16T08:03:58.629559Z"
+     "end_time": "2019-01-21T09:48:14.667817Z",
+     "start_time": "2019-01-21T09:48:14.660302Z"
     }
    },
    "outputs": [],
    "source": [
-    "output_filename = 'old_fikalists/autumn18.fika'\n",
+    "output_filename = 'old_fikalists/winter19.fika'\n",
     "fikalist.save(output_filename)"
    ]
   }
